--- a/package.json
+++ b/package.json
@@ -1,20 +1,7 @@
 {
-	"name": "logtest",
-	"version": "0.0.1",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview"
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^1.0.0",
-		"@sveltejs/kit": "^1.0.0",
-		"svelte": "^3.54.0",
-		"vite": "^4.0.0"
-	},
-	"type": "module",
-	"dependencies": {
-		"mongodb": "^4.13.0"
-	}
+    "name": "nightwatchLog",
+    "version": "1.0.0",
+    "dependencies": {
+        "mongodb": "latest"
+    }
 }
